# zit

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  conanfile.txt  default.nix  todo.org  vcpkg.json
.github/: ci.yml
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml
src/: CMakeLists.txt  arg_parser.cpp  arg_parser.h  arg_parser.hpp  asio_helpers.hpp  bencode.h  bencode.hpp  bitfield.cpp  bitfield.h  bitfield.hpp  class_utils.hpp  file_utils.h  file_utils.hpp  file_writer.cpp  file_writer.h  file_writer.hpp  global_config.cpp  global_config.hpp  logger.hpp  main.cpp  main_afl.cpp  messages.cpp  messages.h  messages.hpp  net.cpp  net.h  net.hpp  peer.cpp  peer.h  peer.hpp  piece.cpp  piece.h  piece.hpp  random.hpp  retry.hpp  scope_guard.hpp  sha1.cpp  sha1.h  sha1.hpp  string_utils.h  (+10 more)
src/socket_test/: CMakeLists.txt  README.md  client.cpp  common.hpp  server.cpp
src/torrent_writer/: CMakeLists.txt  torrent_writer.cpp
src/tui/: CMakeLists.txt  controller.cpp  controller.hpp  model.cpp  model.hpp  tui.cpp  tui_logger.hpp
src/tui/view/: components.cpp  components.hpp
tests/: CMakeLists.txt  README.md  customTestManip.cmake  main_libfuzzer.cpp  process.cpp  process.hpp  process_linux.cpp  process_windows.cpp  test_arg_parser.cpp  test_bencode.cpp  test_bitfield.cpp  test_global_config.cpp  test_integrate.cpp  test_main.cpp  test_main.hpp  test_net.cpp  test_peer.cpp  test_process.cpp  test_random.cpp  test_retry.cpp  test_sha1.cpp  test_string_utils.cpp  test_torrent.cpp  test_torrent_writer.cpp  test_types.cpp  test_utils.hpp  udp_server.py
tests/data/: 1MiB.torrent  bencode_recursion.txt  multi.torrent  opentracker.whitelist  test.torrent  test2.torrent
tests/data/multi/: a  b  c  d  e  f  g
tests/docker/: opentracker.dockerfile  opentracker_entrypoint.sh  transmission.dockerfile  tsan_suppressions.txt  webtorrent.dockerfile  webtorrent_entrypoint.sh  zit.dockerfile  zit_entrypoint.sh
